Aligned and fixed the external window icon in quote modal

--- a/components/QuoteModalContent/QuoteModalContent.module.scss
+++ b/components/QuoteModalContent/QuoteModalContent.module.scss
@@ -132,6 +132,18 @@
   svg {
     position: relative;
     left: 0.2em;
+    top: 0.2em;
+    height: 14px;
+    width: 14px;
+
+    @include mq-min-width(lg) {
+      height: 16px;
+      width: 16px;
+    }
+    @include mq-min-width(xl) {
+      height: 21px;
+      width: 21px;
+    }
     path {
       stroke-width: 0.7;
     }
